feat: document products APIs through Swagger spec
